--- a/HVKL.vbproj
+++ b/HVKL.vbproj
@@ -30,8 +30,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AntdUI" Version="1.5.4" />
+    <PackageReference Include="AntdUI" Version="1.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SSH.NET" Version="2024.1.0" />
   </ItemGroup>
 
   <ItemGroup>
