--- a/HVKL.vbproj
+++ b/HVKL.vbproj
@@ -44,6 +44,7 @@
     <PackageReference Include="SSH.NET" Version="2024.2.0" />
     <PackageReference Include="TagLibSharp" Version="2.3.0" />
     <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.21" />
+	<FrameworkReference Include="Microsoft.WindowsDesktop.App" />
   </ItemGroup>
 
 	<ItemGroup>
