--- a/HVKL.vbproj
+++ b/HVKL.vbproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-	<TargetFramework>net8.0-windows</TargetFramework>
+	<TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
 	<StartupObject>HVKL.My.MyApplication</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
     <MyType>WindowsForms</MyType>
-    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
+    <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
     <AssemblyVersion>1.2.0</AssemblyVersion>
     <FileVersion>1.2.0</FileVersion>
     <Company>RedCookieStudios</Company>
@@ -17,7 +17,18 @@
     <PackageProjectUrl>https://cookie987.top</PackageProjectUrl>
     <PackageIcon>a2a7641a26b367608c6ef28ce9b7e983.png</PackageIcon>
     <ApplicationIcon>favicon (1).ico</ApplicationIcon>
+	<RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
 	<TargetPlatformIdentifier>Windows</TargetPlatformIdentifier>
+	<TargetPlatformVersion>10.0.19041.0</TargetPlatformVersion>
+	<ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
@@ -36,11 +47,12 @@
 
   <ItemGroup>
     <PackageReference Include="AntdUI" Version="1.8.6" />
+    <PackageReference Include="CefSharp.WinForms.NETCore" Version="132.3.11" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.72" />
     <PackageReference Include="LibVLCSharp" Version="3.9.2" />
     <PackageReference Include="LibVLCSharp.Forms" Version="3.9.2" />
     <PackageReference Include="LibVLCSharp.WinForms" Version="3.9.2" />
-    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2957.106" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.250108002" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SSH.NET" Version="2024.2.0" />
     <PackageReference Include="TagLibSharp" Version="2.3.0" />
